--- a/test/fixtures/heroes.yml
+++ b/test/fixtures/heroes.yml
@@ -1,15 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  name: Denn
   pronouns: MyString
-  category: MyString
-  role: one
-  ancestry: one
 
 two:
-  name: MyString
+  name: Carina Croftblade
   pronouns: MyString
-  category: MyString
-  role: two
-  ancestry: two
