--- a/test/fixtures/heroes.yml
+++ b/test/fixtures/heroes.yml
@@ -1,9 +1,19 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+denn:
   name: Denn
-  pronouns: MyString
+  slug: denn
+  pronouns: "They/Them"
+  role: fighter
+  ancestry: human
+  background: criminal
+  character_class: fighter
 
-two:
+carina:
   name: Carina Croftblade
-  pronouns: MyString
+  slug: carina-croftblade
+  pronouns: "She/Her"
+  role: strategist
+  ancestry: elf
+  background: acolyte
+  character_class: wizard
