--- a/fly.toml
+++ b/fly.toml
@@ -9,6 +9,9 @@ console_command = '/rails/bin/rails console'
 
 [build]
 
+[deploy]
+  release_command = "bin/rails db:prepare"
+
 [env]
   PORT = '8080'
 
